// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout App renders correctly 1`] = `
<div
  className="undefined undefined undefined"
>
  <div>
    <withRouter(Connect(Navigation)) />
  </div>
  <main
    role="main"
  >
    <div>
      App Layout
    </div>
  </main>
  <ScrollToTop />
</div>
`;

exports[`Layout Form renders correctly 1`] = `
<div
  className="undefined undefined"
>
  <main
    role="main"
  >
    <div>
      Form Layout
    </div>
  </main>
  <ScrollToTop />
</div>
`;

exports[`Layout renders the correct default layout 1`] = `
<Form>
  Default
</Form>
`;

exports[`Layout renders the specified layout 1`] = `
<AppMock>
  AppMock
</AppMock>
`;
